--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -85,6 +85,7 @@ nav {
     }
     ul li.active a {
         background-color: darken(#D9736A, 8%);
+        color: #F2F0D5;
     }
     ul li a:hover {
         background-color: darken(#D9736A, 4%);
